Add support for deploying to Equinix Metal bare-metal servers
Adds an additional hw_config which is simplified (equinix-metal).
Adds support for skipping HW provisioning (pre-provisioned through EM).
Usage: deploy.sh [k8s]
Adds a few new helper functions, and updates existing to support changes.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I2f84c662d183ba224e0edd8a218abe8b46c1fe45

--- a/playbooks/roles/jump-vm/templates/network-config.j2
+++ b/playbooks/roles/jump-vm/templates/network-config.j2
@@ -1,3 +1,4 @@
+{% if deployment_type == 'full' %}
 version: 1
 config:
   - type: physical
@@ -12,3 +13,4 @@ config:
       - type: static
         address: "{{ jumphost.interfaces[idf.net_config[engine.pxe_network].interface].address }}"
         netmask: "{{ idf.net_config[engine.pxe_network].mask }}"
+{% endif %}
