Update BMRA to v2.0
Also adds configuration of BMRA through the existing hw_config files (idf, pdf)
and better handling of dependencies.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: Iedaf249f01ea3e1e00c889e846e21644adff98c7
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/71504
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>
Reviewed-by: Georg Kunz <georg.kunz@ericsson.com>

--- a/playbooks/roles/bmra-config/templates/inventory.j2
+++ b/playbooks/roles/bmra-config/templates/inventory.j2
@@ -2,6 +2,7 @@
 {% for node in nodes %}
 {{ idf.kubespray.hostnames[node.name] }}   ansible_host={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }} ip={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }}
 {% endfor %}
+localhost
 
 {% for role in ['kube-master', 'etcd', 'kube-node'] %}
 [{{ role }}]
@@ -17,3 +18,6 @@ kube-master
 kube-node
 
 [calico-rr]
+
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
