Replace older BMRA docker image with new one & add changes for running it in CentOS 7
This change updates the Docker file of the BMRA
container & replaces the old image by the new one.
Additionally, it introduces changes needed to deploy
BMRA on CentOS 7.

Change-Id: I3f951bd147b457606719243d95fe48df14ecd449
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/71613
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Michael Pedersen <michaelx.pedersen@intel.com>

--- a/playbooks/roles/bmra-config/templates/inventory.j2
+++ b/playbooks/roles/bmra-config/templates/inventory.j2
@@ -19,5 +19,7 @@ kube-node
 
 [calico-rr]
 
+{% if deployment_type == 'k8s' %}
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
+{% endif %}
