Update BMRA to v2.1
Updated Kuberef to use BMRA v2.1 instead of v2.0.
Removed a few workarounds used for BMRA v2.0.
Updated a few dependencies in deployment container.
Updated Kuberef templates for BMRA configuration.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I091da09277ca9ecc0d3d7574dc3c4f000e73432d
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/72064
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/playbooks/roles/bmra-config/templates/all.j2
+++ b/playbooks/roles/bmra-config/templates/all.j2
@@ -65,7 +65,7 @@ topology_manager_policy: "{{ bmra.features.topology_manager.policy }}"
 sriov_net_dp_enabled: {{ bmra.features.sriov_net_dp }}
 sriov_net_dp_namespace: kube-system
 # whether to build and store image locally or use one from public external registry
-sriov_net_dp_build_image_locally: false
+sriov_net_dp_build_image_locally: true
 # SR-IOV network device plugin configuration.
 # For more information on supported configuration refer to: https://github.com/intel/sriov-network-device-plugin#configurations
 sriovdp_config_data: |
