Update BMRA to v21.03
Update Kuberef to use most recent release of BMRA.
Also updates configuration with minor changes and additions.

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: Ifc4ef114564a2085000c23347390089227c0ebd9

--- a/playbooks/roles/bmra-config/templates/inventory.j2
+++ b/playbooks/roles/bmra-config/templates/inventory.j2
@@ -2,7 +2,7 @@
 {% for node in nodes %}
 {{ idf.kubespray.hostnames[node.name] }}   ansible_host={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }} ip={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }}
 {% endfor %}
-localhost ansible_python_interpreter=/usr/bin/python2
+localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python2
 
 {% for role in ['kube-master', 'etcd', 'kube-node'] %}
 [{{ role }}]
@@ -19,7 +19,7 @@ kube-node
 
 [calico-rr]
 
-{% if deployment_type == 'k8s' %}
+{% if os_distro|lower != 'centos7' %}
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 {% endif %}
