Align license headers with REUSE guidelines
This patch applies a consistent use of license and copyright
headers to all source files according to the guidelines of
REUSE.

Signed-off-by: Georg Kunz <georg.kunz@ericsson.com>
Change-Id: I8973efe304e8fb03ad0861d4b8356221d898d548

--- a/playbooks/roles/bmra-config/templates/inventory.j2
+++ b/playbooks/roles/bmra-config/templates/inventory.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2021 Anuket contributors
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 [all]
 {% for node in nodes %}
 {{ idf.kubespray.hostnames[node.name] }}   ansible_host={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }} ip={{ node.interfaces[idf.net_config[engine.pxe_network].interface].address }}
