--- a/playbooks/roles/jump-vm/templates/meta-data.j2
+++ b/playbooks/roles/jump-vm/templates/meta-data.j2
@@ -1,1 +1,7 @@
+{#
+SPDX-FileCopyrightText: 2021 Anuket contributors
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 local-hostname: {{ jumphost.name }}
