--- a/playbooks/roles/jump-vm/templates/network-config.j2
+++ b/playbooks/roles/jump-vm/templates/network-config.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2021 Anuket contributors
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 {% if deployment_type == 'full' %}
 version: 1
 config:
