--- a/playbooks/roles/jump-vm/templates/user-data.j2
+++ b/playbooks/roles/jump-vm/templates/user-data.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2021 Anuket contributors
+
+SPDX-License-Identifier: Apache-2.0
+#}
+
 #jinja2:lstrip_blocks: True
 #cloud-config
 users:
